# simple-rtsp

./: CMakeLists.txt  rtsp.cpp
